<resources>
  <string name="app_name">Where2Eat</string>
  <string name="restaurant_list_filter_hint">Filter by restaurant name</string>

  <!--Menu-->
  <string name="menu_select_sort_value">Select Sorting Value</string>
  <string name="minimum_cost">Minimum Cost</string>
  <string name="delivery_costs">Delivery Cost</string>
  <string name="avg_product_price">Average Product Price</string>
  <string name="popularity">Popularity</string>
  <string name="distance">Distance</string>
  <string name="rating_average">Rating Average</string>
  <string name="newest">Newest</string>
  <string name="best_match">Best Match</string>

  <!--Errors-->
  <string name="error_generic">Something went wrong please try again</string>
  <string name="error_internet">You should connected to internet for the first time</string>
  <string name="error_database">Database failure</string>

</resources>
